# ArtEngine

./: .env  .gitignore  Dockerfile  README.md  Todo.md  auto_sync.py  common.py  main.py  pyproject.toml  requirements.txt
api/: .env  main.py
api/routes/images/: crud.py  models.py  route.py  utils.py
api/routes/users/: crud.py  route.py
app/: common.py  database.py  main.py
app/routes/images/: crud.py  models.py  route.py  schemas.py  utils.py
app/routes/users/: crud.py  models.py  route.py  schemas.py  utils.py
notebook/: test.ipynb
public/: credentials.json
routes/images/: route.py  utils.py
routes/users/: crud.py  route.py  schemas.py  utils.py
